<resources>
    <string name="app_name">LoginSignUp</string>
    <string name="welcome_to_home_seller">Welcome to Home seller</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_assword">Forget Password</string>
    <string name="login">Login</string>
    <string name="signup">SIGNUP</string>
</resources>